--- a/config/config.ini
+++ b/config/config.ini
@@ -11,7 +11,7 @@
 ;
 [Credentials]
 ; If you do not know what your token is, you can get it on your bot's control panel page on https://discordapp.com/developers/applications/me
-Token =
+Token = NjQ2MzE0OTYzNjMxMjEwNDk4.XdlLvg.fxg2LuGLtOKZMueCr1xEthU_V-o
 
 ; If you have a token for bots.discord.pw then put it here
 ;Dbots_Token =
@@ -21,7 +21,7 @@ Token =
 
 [Bot]
 ; Put your user ID here
-Owner_ID =
+Owner_ID = 559612561243373568
 
 ; This is the prefix for the bot
 Command_Prefix = *
@@ -29,7 +29,7 @@ Command_Prefix = *
 ; Example: ID1 ID2 ID3
 ; Be sure to uncomment if you are entering a developer ID!
 ; Do NOT put the owner ID here!
-;Developer_IDs =
+Developer_IDs = 559612561243373568
 
 ; Example: ID1 ID2 ID3
 ; Be sure to uncomment if you are entering a developer ID!
@@ -40,7 +40,7 @@ Command_Prefix = *
 Max_NSFW_Count = 500
 
 ; How many votes is needed to perform a song skip
-Skips_Votes_Needed = 3
+Skips_Votes_Needed = 1
 
 [Status]
 ; Should users be able to edit the bot's status with the stream and changestatus command?
@@ -106,4 +106,4 @@ enable = no
 [Google]
 ; Google API key
 ; In order to create an api key, do this, go to https://console.developers.google.com/apis/credentials and under "create credentials" select "API key"
-;api_key =
+api_key = AIzaSyALpt4m_N3KNSIepEWmGMNca5H-iew0Smk
